# be-hiring-challenge

./: .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  db.sqlite3  docker-compose.yml  dockerfile  manage.py  readme.md  requirements-dev.txt  requirements.txt  sample_data_2.csv  setup.cfg
api/: .gitignore  README.md  local.yml  requirements.txt  setup.cfg
api_server/: db.sqlite3  manage.py  settings.py  urls.py
assignment/: README.md  requirements.txt
cli/: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  cli.py  requirements.txt  rest_client.py  setup.py
cli-app/: .gitignore  api.py  helpers.py  main.py  readme.md  setup.py
cli_tools/: cli_tools.py  setup.py
client/: README.md  requirements_dev.txt  setup.cfg  setup.py
command_line/: cli.py  utils.py
datapane/: db.sqlite3  manage.py  ouput.xlsx
datapane_api_server/: Dockerfile  (+4 more)
dataset-api/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
dataset-api/dataset/: .gitignore  manage.py
dataset-api/dataset/api/: admin.py  models.py  serializers.py  views.py
dataset-api/dataset/api/migrations/: 0001_initial.py
dataset-api/dataset/dataset/: asgi.py  urls.py  wsgi.py
dataset-api/dataset/dataset/settings/: base_settings.py  dev_settings.py  prod_settings.py  test_settings.py
dataset-api/dataset/logs/: .gitkeep
dataset-api/nginx/: nginx.conf
dataset-cli/: .gitignore  README.md  cli.py  client.py  pyproject.toml  requirements.txt  setup.py
dataset-cli/dataset_cli/: globals.py  main.py  utils.py
dataset-cli/tests/: test_dataset_cli.py
(+199 files in other folders)
